src/test/resources/parser/invalid/nonBooleanNot.sbsc
// parser should fail when using the NOT operator on something that isnt a boolean

a = !"hello";